# nami-ai

./: README.md  pyproject.toml
src/nami_ai/: __init__.py  cli.py
src/nami_ai/agent/: __init__.py  forecaster.py
src/nami_ai/api/: main.py
src/nami_ai/config/: __init__.py  spots.py
src/nami_ai/domain/: __init__.py  knowledge.py  schema.py
src/nami_ai/tools/: __init__.py  marine.py  tide.py  weather.py
tests/: test_api.py  test_cli.py  test_forecaster.py  test_knowledge.py  test_schema.py  test_spots.py  test_tools.py
