[project]
name = "nami-ai"
version = "0.1.0"
description = "Shonan surf condition forecasting agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nami_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
